--- a/index.html
+++ b/index.html
@@ -1,17 +1,10 @@
-<!doctype html>
-<html lang="pt-BR">
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Screenshot</title>
-  <style>
-    body { margin:0; display:flex; align-items:center; justify-content:center; height:100vh; background:#111; }
-    img { max-width:95vw; max-height:95vh; box-shadow:0 8px 30px rgba(0,0,0,0.7); border-radius:6px; }
-    .note { position:fixed; top:8px; left:8px; color:#ccc; font-family:Arial,Helvetica,sans-serif; font-size:13px; }
-  </style>
+    <meta charset="utf-8">
+    <title>Visualizar Imagem</title>
 </head>
-<body>
-  <div class="note">Imagem: Desktop-screenshot-12-01-2025_01_43_PM.png</div>
-  <img src="Desktop-screenshot-12-01-2025_01_43_PM.png" alt="Screenshot">
+<body style="margin:0; padding:0;">
+    <img src="Desktop-screenshot-12-01-2025_01_43_PM.png" style="width:100%; height:auto;">
 </body>
 </html>
