--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <title>Visualizar Imagem</title>
-</head>
-<body style="margin:0; padding:0;">
-    <img src="Desktop-screenshot-12-01-2025_01_43_PM.png" style="width:100%; height:auto;">
-</body>
+  <head><meta charset="utf-8"><title>Imagem</title></head>
+  <body>
+    <img src="https://raw.githubusercontent.com/Heitor909/testy/main/Desktop-screenshot-12-01-2025_01_43_PM.png" alt="Screenshot">
+  </body>
 </html>
